# Tandem

./: .gitignore  README.md
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/tandem/reader/bundle/: Book.kt  BundleLoader.kt  BundleModels.kt
android_app/app/src/main/java/com/tandem/reader/core/: TandemSession.kt
android_app/app/src/main/java/com/tandem/reader/match/: PositionMatcher.kt  TextNormalizer.kt
android_app/app/src/main/java/com/tandem/reader/player/: PlaybackService.kt  PlayerController.kt
android_app/app/src/main/java/com/tandem/reader/service/: ReaderAccessibilityService.kt  VisibleTextExtractor.kt
android_app/app/src/main/java/com/tandem/reader/settings/: Settings.kt
android_app/app/src/main/java/com/tandem/reader/ui/: MainActivity.kt  SettingsActivity.kt
android_app/app/src/main/res/drawable/: ic_launcher.xml
android_app/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_app/app/src/main/res/xml/: accessibility_service_config.xml
docs/: bundle-format.md
docs/superpowers/specs/: 2026-07-03-epub-audiobook-sync-design.md
pc_pipeline/: pyproject.toml
pc_pipeline/tandem_pipeline/: __init__.py  aligner.py  bundle_exporter.py  cli.py  epub_parser.py  models.py  tts_generator.py
pc_pipeline/tests/: conftest.py  test_bundle_exporter.py  test_cli_helpers.py  test_epub_parser.py  test_epub_parser_edge.py  test_models.py
(+3 files in other folders)
