[project]
name = "tandem-pipeline"
version = "0.1.0"
description = "EPUB -> synced-audiobook export bundle generator (parse, TTS, align, bundle)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pysbd>=0.3.4",
    "piper-tts>=1.2",
    "whisperx>=3.1",
    "click>=8.1",
    "soundfile>=0.12",
    "numpy<2",
    # Pin the torch stack: whisperx/pyannote reference torchaudio.AudioMetaData,
    # removed in torchaudio >2.5; transformers 5.x also breaks pyannote.
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "transformers<5",
]

[project.scripts]
tandem = "tandem_pipeline.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tandem_pipeline"]

[tool.uv]
# whisperx/torch resolve cleanly with build isolation; pin python for reproducibility
